Fix: Reduce vertical spacing to 0.3em
- Changed space height from 1em to 0.3em
- Much tighter spacing between words in vertical text
- Approximately 1/3 of character height

--- a/style.css
+++ b/style.css
@@ -1493,7 +1493,7 @@ footer a:hover {
 }
 
 .concept-word-vertical .concept-char:not(.concept-word-block) {
-    height: 1em;
+    height: 0.3em;
     line-height: 1;
 }
 
